converts objects to providers to work as a web app, and creates simple interface for testing

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -5,6 +5,12 @@
 :root {
   --background: #ffffff;
   --foreground: #171717;
+
+  --bot-square: blue;
+  --fruit-square: red;
+  --p1-square: green;
+  --p2-square: yellow;
+  --empty-square: white;
 }
 
 @media (prefers-color-scheme: dark) {
