--- a/src/components/Game/index.css
+++ b/src/components/Game/index.css
@@ -1,13 +1,29 @@
 
+.game-board,
+.start-info-container {
+  width: min(80vw, 90vh);
+}
+
+.setup-label, 
+.game-home-title,
+.start-details-container,
+.start-info-img {
+  background: radial-gradient(
+    circle,
+    rgba(0, 0, 0, 0.8) 0%,  /* Darkest in the center */
+    rgba(0, 0, 0, 0.2) 60%, /* Fades as it spreads */
+    rgba(0, 0, 0, 0.1) 70%,  /* Darkest in the center */
+    rgba(0, 0, 0, 0) 100%   /* Fully transparent at the edges */
+  );
+}
+
 
 .game-board {
   display: grid;
   position: relative;
   aspect-ratio: 1 / 1;
 
-  width: 100%;
   height: auto;
-  width: min(80vw, 90vh);
 }
 
 .game-square {
@@ -63,25 +79,11 @@
 .game-home-title {
   font-size: 4em;
   padding: 20px;
-  background: radial-gradient(
-    circle,
-    rgba(0, 0, 0, 0.8) 0%,  /* Darkest in the center */
-    rgba(0, 0, 0, 0.2) 60%, /* Fades as it spreads */
-    rgba(0, 0, 0, 0.1) 70%,  /* Darkest in the center */
-    rgba(0, 0, 0, 0) 100%   /* Fully transparent at the edges */
-  );
 }
 
 .setup-label {
   font-size: 1.4em;
   padding: 20px;
-  background: radial-gradient(
-    circle,
-    rgba(0, 0, 0, 0.8) 0%,  /* Darkest in the center */
-    rgba(0, 0, 0, 0.2) 60%, /* Fades as it spreads */
-    rgba(0, 0, 0, 0.1) 70%,  /* Darkest in the center */
-    rgba(0, 0, 0, 0) 100%   /* Fully transparent at the edges */
-  );
 }
 
 .game-setup-button-container {
@@ -99,4 +101,21 @@
 
 .game-score-container.center {
   justify-content: center
+}
+
+.start-info-container {
+  display: flex;
+  justify-content: space-around;
+}
+
+.start-details-container {
+  opacity: 1;
+  transition: opacity 0.3s ease;
+  display: flex;
+  flex-direction: column;
+  gap: 20px;
+}
+
+.start-details-container.ready {
+  opacity: 0;
 }
